--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,21 @@ permissions: read-all
 jobs:
   build:
     name: Build ${{ matrix.target }}
-    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
-        target: [ "apk --debug", "appbundle --debug", "ios --no-codesign", macos, web ]
+        include:
+          - os: ubuntu
+            target: "apk --debug"
+          - os: ubuntu
+            target: "appbundle --debug"
+          - os: macos
+            target: "ios --no-codesign"
+          - os: macos
+            target: macos
+          - os: ubuntu
+            target: web
+    runs-on: ${{ matrix.os }}-latest
     steps:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -27,7 +37,9 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: master
+          cache: true
       - run: flutter config --enable-macos-desktop
+        if: ${{ matrix.os == 'macos' }}
       - run: flutter doctor -v
 
       # Checkout code and get packages.
