--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -35,7 +35,7 @@ jobs:
       # checkout & build
       - uses: actions/checkout@v3
       - run: flutter pub get
-      - run: flutter build -v web --release
+      - run: flutter build -v web --release --base-href "/flutter-danggn-ui/"
 
       # upload artifact
       - name: Upload artifact
