--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   intl: ^0.18.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
